# GameTech

./: #Makefile#  Ball.cpp  Ball.h  BaseApplication.cpp  BaseApplication.h  BulletContactCallback.h  Character.h  Client.cpp  Client.h  GameObject.cpp  GameObject.h  Makefile  Makefile.am  Makefile.in  NetManager.cpp  Obstacle.cpp  Obstacle.h  OgreMotionState.cpp  OgreMotionState.h  Paddle.cpp  Paddle.h  PlayingField.cpp  PlayingField.h  ProjectReport.txt  README.txt  Server.cpp  Server.h  Simulator.cpp  Simulator.h  TutorialApplication.cpp  TutorialApplication.h  UserManual.txt  Wall.cpp  Wall.h  class Server{  config.status  configure  configure.ac  libtool  ogre.cfg  (+1 more)
.deps/: assignment2-Ball.Po  assignment2-BaseApplication.Po  assignment2-Client.Po  assignment2-GameObject.Po  assignment2-NetManager.Po  assignment2-Obstacle.Po  assignment2-OgreMotionState.Po  assignment2-Paddle.Po  assignment2-PlayingField.Po  assignment2-Server.Po  assignment2-Simulator.Po  assignment2-TutorialApplication.Po  assignment2-Wall.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
myTexture/: mystuff.material
